  * Updated dataset_id and other IDs to reflect woudc-api changes
  * Fixed autoZoomToCountry consider station markers of the country as well
  * Updated french text translations
  * Removed instrument serial 0 padding to reflect graph product changes
  * Replaced all beta.woudc.org with woudc.org URLs
  * Updated graph product queries to include properties= and increased limit=

 -- Kevin Ngai <kevin.ngai@ec.gc.ca>  Wed, 21 May 2025 16:15:11 +0000

woudc-ui (2.0.0-beta20.1) focal; urgency=medium

  * Fix previously removed CS Policy
  * Update package-lock.json for NodeJS 16.x

 -- Kevin Ngai <kevin.ngai@ec.gc.ca>  Thu, 27 Jun 2024 21:38:00 +0000

woudc-ui (2.0.0-beta20) focal; urgency=medium

  * Added "Maps of normal ozone" page
  * Updated text information for ozone maps pages
  * Changed links of ozone map products to the new ozone maps search page with links by individual types and allowing query params for each type
  * Changed route structure of ozone maps and normal ozone maps pages to use optional dynamic routes for its tabs
  * Fixed meta description of josie-besos page
  * Fixed to incorrect formatting of vue-i18n linked locale messages
  * Fixed to missing links for ozone maps pages
  * Fixed Strict-Transport-Security
  * Fixed nightly redirects
  * Fixed Vue warnings from layouts/default.vue

 -- Kevin Ngai <kevin.ngai@ec.gc.ca>  Tue, 04 Jun 2024 21:05:00 +0000

woudc-ui (2.0.0-beta19) focal; urgency=medium

  * Added ozone maps data products search page
  * Added JOSIE-BESOS data products page
  * Changed favicon to newer WMO logo
  * Added WMO logo on header title
  * SEO, description and keywords fixes
  * Minor styling improvements

 -- Kevin Ngai <kevin.ngai@ec.gc.ca>  Wed, 10 Apr 2024 22:33:00 +0000

woudc-ui (2.0.0-beta18.1) focal; urgency=medium

  * Fix apache config missing -Indexes for root application path

 -- Kevin Ngai <kevin.ngai@ec.gc.ca>  Wed, 07 Dec 2022 22:25:00 +0000

woudc-ui (2.0.0-beta18) focal; urgency=medium
