@@ -1,7 +1,6 @@
-WOUDC_UI_BASE_URL=https://beta-woudc-dev.cmc.ec.gc.ca
+WOUDC_UI_BASE_URL=http://woudc.org
 WOUDC_UI_ROUTER_BASE=
-WOUDC_UI_API_URL=https://geobeta-woudc-dev.cmc.ec.gc.ca/oapi
-WOUDC_UI_WAF_URL=https://beta-woudc-dev.cmc.ec.gc.ca/archive
+WOUDC_UI_API_URL=https://api.woudc.org
+WOUDC_UI_WAF_URL=https://woudc.org/archive
 WOUDC_UI_WMO_REGIONS_URL=https://cdn.rawgit.com/OGCMetOceanDWG/wmo-ra/master/wmo-ra.geojson
-WOUDC_UI_OWS_URL=https://geo.woudc.org
 WOUDC_UI_EMAIL_ADDRESS=woudc@ec.gc.ca
